<resources>
    <string name="app_name">STRATEGIE</string>
    <string name="text_username">Username</string>
    <string name="usuariomail">Email</string>
    <string name="text_password">Password</string>
    <string name="ingreso_password">Enter your password</string>
    <string name="txt_botoningreso">Get into</string>
    <string name="txt_botonregistro">Check in</string>

    <string name="txt_nombre">Name</string>
    <string name="txt_apellido">Surname</string>
    <string name="txt_nitcedula">ID</string>
    <string name="txt_email">Email</string>
    <string name="txt_telefono">Cell phone</string>
    <string name="txt_clave">Password</string>
    <string name="txt_claverepetir">Repeat password</string>
    <string name="txt_politicas">Privacy policy</string>

    <string name="txt_nombrecompleto">Your full name</string>
    <string name="txt_apellidocompleto">His two surnames</string>

    <string name="txt_botonenviar">Send</string>

    <string name="txt_nombrebienvenida">Welcome XXX</string>
    <string name="txt_informacion1">Select from the following list of jobs which you want to apply for</string>
    <string name="txt_trabajo1">Ticket sales</string>
    <string name="txt_atencioncliente">Customer Support</string>
    <string name="txt_callcenter">Call Center</string>
    <string name="txt_organizacionespacio">Sort spaces</string>

    <string name="txt_welcome">WELCOME</string>
    <string name="txt_welcomeinvalido">Invalid username or password</string>

    <string name="txt_titulobusqueda">Search</string>
    <string name="txt_preferencias">Settings</string>
    <string name="txt_salir">Logout</string>

    <string name="txt_botonflotante">Element Add</string>
    <string name="trabajo1Detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida felis eu venenatis efficitur. Duis a euismod erat. Mauris hendrerit tortor tellus, nec malesuada orci laoreet eget</string>

</resources>