<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="ToDoFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_501"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/stra_staffboleteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/txt_trabajo1"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_detail_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">>" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_501"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/stra_atencioncliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/txt_atencioncliente"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_detail_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">>" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_501"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/stra_callcenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/txt_callcenter"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_detail_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">>" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_501"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/stra_ordenarespacios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/txt_organizacionespacio"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_detail_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">>" />

    </LinearLayout>




</LinearLayout>